<resources>
    <string name="app_name">Aapni Shop</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="new_item">New Item</string>
    <string name="my_account">My Account</string>
    <string name="dialog_title">Transaction Type</string>
    <string name="shop_address">Dhand Market, Todi College Road \n Laxmangarh, Sikar</string>
    <string name="tr_summary">Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">Summary</string>
    <string name="exit_msg">\" Press Back again to Exit \"</string>
    <string name="developer_name">Vishnu Kumawat</string>
    <string name="clear_database">Delete All Item</string>
    <string name="delete_db_text">Do you want to Delete all items...</string>
    <string name="clear_transaction">Delete All</string>
    <string name="menu_item_delete">Delete</string>
</resources>
