<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/add_new_item"
        android:enabled="true"
        android:icon="@drawable/ic_plus_one_black_24dp"
        android:title="@string/new_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/clear_database"
        android:enabled="true"
        android:title="@string/clear_database"
        app:showAsAction="collapseActionView"/>

</menu>